force-app/main/default/objects/PedidoSuporte__c/PedidoSuporte__c.object-meta.xml
<CustomObject>
    <label>PedidoSuporte</label>
    <nameField>
        <label>PedidoSuporte Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PedidosSuporte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>