force-app/main/default/objects/PedidoSuporte__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prioridade</valueSetName>
    </valueSet>
</CustomField>