force-app/main/default/objects/PedidoSuporte__c/validationRules/Proibido_Cancelar_Pedido_Resolvido.validationRule-meta.xml
<ValidationRule>
    <fullName>Proibido_Cancelar_Pedido_Resolvido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Resolvido&quot;),
    ISPICKVAL(Status__c, &quot;Cancelado&quot;)
)</errorConditionFormula>
    <errorMessage>Pedidos já resolvidos não podem ser cancelados.</errorMessage>
</ValidationRule>